frontend: fix partly visible cursor in swap send
The cursor was only partly visible in case input field was empty,
it was cut-off by border-radius.

--- a/frontends/web/src/routes/market/swap/components/input-with-account-selector.module.css
+++ b/frontends/web/src/routes/market/swap/components/input-with-account-selector.module.css
@@ -72,7 +72,9 @@
   text-overflow: ellipsis;
 }
 
-.inputField {
+.inputField,
+.inputField input[type="number"],
+.inputField input[type="text"] {
   border-radius: 0;
 }
 
